[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/title/title.gd" type="Script" id=1]
[ext_resource path="res://Cutscenes/pre_level_1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/testCircle.png" type="Texture" id=3]
[ext_resource path="res://Assets/fonts/McLaren-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://components/title_buttons/title_buttons.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/music_player/music_player.tscn" type="PackedScene" id=6]
[ext_resource path="res://audio/title.wav" type="AudioStream" id=7]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 150
outline_size = 8
outline_color = Color( 0.356863, 0.356863, 0.356863, 1 )
extra_spacing_char = 6
font_data = ExtResource( 4 )

[sub_resource type="StreamTexture" id=4]
flags = 4

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
script = ExtResource( 1 )
next_scene = ExtResource( 2 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
custom_styles/panel = SubResource( 2 )

[node name="Margins" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Background/Margins"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1820.0
margin_bottom = 980.0
alignment = 1

[node name="Left" type="MarginContainer" parent="Background/Margins/HBoxContainer"]
margin_left = 169.0
margin_top = 327.0
margin_right = 393.0
margin_bottom = 552.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TextureRect" type="TextureRect" parent="Background/Margins/HBoxContainer/Left"]
margin_right = 224.0
margin_bottom = 225.0
texture = ExtResource( 3 )

[node name="Menu Margins" type="MarginContainer" parent="Background/Margins/HBoxContainer"]
margin_left = 566.0
margin_top = 116.0
margin_right = 1720.0
margin_bottom = 764.0
size_flags_horizontal = 6
size_flags_vertical = 4
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/Margins/HBoxContainer/Menu Margins"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1134.0
margin_bottom = 628.0
size_flags_horizontal = 6
custom_constants/separation = 100

[node name="Label" type="Label" parent="Background/Margins/HBoxContainer/Menu Margins/VBoxContainer2"]
margin_right = 1114.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 3 )
text = "A Type of Life"

[node name="Main Title" type="TextureRect" parent="Background/Margins/HBoxContainer/Menu Margins/VBoxContainer2"]
visible = false
margin_top = 316.0
margin_right = 788.0
margin_bottom = 316.0
texture = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="Background/Margins/HBoxContainer/Menu Margins/VBoxContainer2"]
margin_top = 316.0
margin_right = 1114.0
margin_bottom = 608.0
custom_constants/margin_left = 200

[node name="Menu Buttons" parent="Background/Margins/HBoxContainer/Menu Margins/VBoxContainer2/MarginContainer" instance=ExtResource( 5 )]
margin_left = 200.0
margin_right = 1114.0
margin_bottom = 292.0

[node name="Music Player" parent="." instance=ExtResource( 6 )]
music_sound = ExtResource( 7 )
[connection signal="exit" from="Background/Margins/HBoxContainer/Menu Margins/VBoxContainer2/MarginContainer/Menu Buttons" to="." method="_on_exit_press"]
[connection signal="load_game" from="Background/Margins/HBoxContainer/Menu Margins/VBoxContainer2/MarginContainer/Menu Buttons" to="." method="_on_load_game_press"]
[connection signal="new_game" from="Background/Margins/HBoxContainer/Menu Margins/VBoxContainer2/MarginContainer/Menu Buttons" to="." method="_on_new_game_press"]
[connection signal="options" from="Background/Margins/HBoxContainer/Menu Margins/VBoxContainer2/MarginContainer/Menu Buttons" to="." method="_on_options_press"]
